fix cards align and height

--- a/GeoApp/ClientApp/src/app/user/components/projects/projects.component.css
+++ b/GeoApp/ClientApp/src/app/user/components/projects/projects.component.css
@@ -4,7 +4,7 @@
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: baseline;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 3em 0;
@@ -13,4 +13,9 @@
 .mat-card-image {
   width:350px;
   height: 400px
+}
+
+.card.mat-card {
+  width:350px;
+  height: 580px
 }
